add chart links

--- a/vesselTraffic/index.html
+++ b/vesselTraffic/index.html
@@ -15,9 +15,9 @@
 			<h1>Visualizing San Francisco Bay Vessel Traffic</h1>
 			<div class="chart-footer">Emma Tebbe | Greg Tozzi | Joanna Wang</div>
 			<div class="chart-footer">UC Berkeley School of Information</div>
-			
+
 			<div class="divider"></div>
-			
+
 			<div class="columns">
 				<div class="column">
 					<h2>Motivation</h2>
@@ -35,6 +35,7 @@
 				<div class="column">
 					<h2>Using the Tool</h2>
 					<p><strong>Filtering</strong>. Each orange line on the chart represents up to ten individual vessel transits.  Lines representing fewer than ten transits are shown progressively lighter.  Similar transits are combined into clusters.  Filter transits directly by clicking on a cluster of interest on the chart.  You can also filter on vessel length/speed combinations, day of the week, and transit type using the three selectors to the right of the chart.  Select more than one item from a single selector by shift-clicking.  Clear your filters by double clicking the selector of interest.</p>
+          <p><strong>Other resources</strong>. It may be beneficial to reference the nautical charts to the area while using the tool. These charts cover <a href="https://charts.noaa.gov/PDFs/18650.pdf">the central bay area</a>, <a href="https://charts.noaa.gov/PDFs/18653.pdf">the northern bay area</a>, and <a href="https://charts.noaa.gov/PDFs/18654.pdf">the San Pablo Bay area</a>.</p>
 					<p><strong>An example</strong>. Let's say you are interested in determining which of the Bay's commercial facilities receives the most deep draft vessel traffic.  Start by shift-clicking the nine boxes representing vessels greater than 100m in length across all available speeds.  Note that the most frequent transit for large vessels is from sea to the Port of Oakland's inner and outer harbors but that some vessels proceed to anchor before transiting inbound Oakland.</p>
 				</div>
 				<div class="column">
